下次開始更新scss red檔案

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header-compment></header-compment>
   <div class="box d-flex">
 
-    <leftbar-compment class="d-none d-md-block" style="width: 200px;"></leftbar-compment>
+    <leftbar-compment></leftbar-compment>
     <main></main>
   </div>
   <ul class="d-flex">
