--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header-compment></header-compment>
   <div class="box d-flex">
 
-    <leftbar-compment></leftbar-compment>
+    <leftbar-compment class="doc-left-box"></leftbar-compment>
     <main></main>
   </div>
   <ul class="d-flex">
