解決COMPMENT路徑問題

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="package/Bootstrap/bootstrap.css">
   <link rel="stylesheet" href="style/css/style.css">
   <title>Document</title>
+  <base href="http://127.0.0.1:5500/">
 </head>
 
 <style>
@@ -33,9 +34,15 @@
   <header-compment id="header-compment"></header-compment>
 
 
+
+
   <div class="yeee d-flex justify-content-center align-items-center">
     <div class="qq">
-      目前首頁沒想法
+      那這邊就寫一班履歷會有的
+
+
+
+
     </div>
   </div>
 
@@ -52,6 +59,7 @@
     console.log("html");
 
   </script>
+
 </body>
 
 </html>
